style: fix the default custom tips block background not readable

--- a/.vitepress/styles/vars.css
+++ b/.vitepress/styles/vars.css
@@ -62,6 +62,7 @@
  * -------------------------------------------------------------------------- */
 
 :root {
+  /* 主色 */
   --vp-c-brand-1: var(--vp-c-sky-1);
   --vp-c-brand-2: var(--vp-c-sky-2);
   --vp-c-brand-3: var(--vp-c-sky-3);
@@ -97,6 +98,19 @@
   :root {
     --vp-home-hero-image-filter: blur(72px);
   }
+}
+
+/**
+ * Component: Badge
+ * -------------------------------------------------------------------------- */
+:root {
+  /* 配置一下 tips 的自定义块的颜色为非默认的产品色，避免与文字不兼容导致可读性下降 */
+  --vp-custom-block-tip-bg: #def4f4;
+}
+
+.dark:root {
+  /* 配置一下在暗色模式下 tips 的自定义块的颜色为非默认的产品色，避免与文字不兼容导致可读性下降 */
+  --vp-custom-block-tip-bg: #02474e;
 }
 
 :root {
